<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ClearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="AllClearBTN"
                android:text="@string/Clear"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/BackBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="BackBTN"
                android:text="@string/Backspace"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/ModBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ModBTN"
                android:text="@string/Mod"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/DivideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="DivideBTN"
                android:text="@string/Divide"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="SevenBTN"
                android:text="@string/Seven"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/EightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="EightBTN"
                android:text="@string/Eight"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/NineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="NineBTN"
                android:text="@string/Nine"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/MulBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="MulBTN"
                android:text="@string/Multiply"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/FourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="FourBTN"
                android:text="@string/Four"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/FiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="FiveBTN"
                android:text="@string/Five"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/SixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="SixBTN"
                android:text="@string/Six"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/SubBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="SubBTN"
                android:text="@string/Subtract"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/OneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="OneBTN"
                android:text="@string/One"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/TwoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="TwoBTN"
                android:text="@string/Two"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/ThreeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ThreeBTN"
                android:text="@string/Three"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/AddBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="AddBTN"
                android:text="@string/Add"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BracketBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ParenthesisBTN"
                android:text="@string/Parentheses"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/ZeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ZeroBTN"
                android:text="@string/Zero"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/DotBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="DotBTN"
                android:text="@string/Dot"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/EqualsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@android:color/holo_red_light"
                android:onClick="EqualsBTN"
                android:text="@string/Equals"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:ignore="TextContrastCheck" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:autofillHints="false"
        android:background="@color/gray"
        android:hint="@string/display"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>